// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Facebook Post Block should render Default 1`] = `
<DocumentFragment>
  <div
    class="css-0 e1q11atd0"
  />
</DocumentFragment>
`;

exports[`Facebook Post Block should render WithClassName 1`] = `
<DocumentFragment>
  <div
    class="extra-classname css-0 e1q11atd0"
  />
</DocumentFragment>
`;
